Fixes spacing between header image and body

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -85,6 +85,12 @@ p {
   top: 100%;
 }
 
+/* Main Header */
+.page-header {
+  margin-bottom: 60px;
+  position: relative;
+}
+
 /* Side Navigation */
 .sidenav {
   background: #ebeced; /* Old browsers */
